--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
             <nav class="header__menu-nav">
               <ul>
                 <li>
-                  <a href="/catalog" class="header__menu-link">catalog</a>
+                  <a href="catalog.html" class="header__menu-link">catalog</a>
                 </li>
-                <li><a href="/blog" class="header__menu-link">blog</a></li>
-                <li><a href="/about" class="header__menu-link">about</a></li>
+                <li><a href="blog.html" class="header__menu-link">blog</a></li>
+                <li>
+                  <a href="about.html" class="header__menu-link">about</a>
+                </li>
               </ul>
             </nav>
           </div>
