--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <nav class="header__menu-nav">
               <ul>
                 <li>
-                  <a href="catalog.html" class="header__menu-link">catalog</a>
+                  <a href="https://google.com" class="header__menu-link"
+                    >test</a
+                  >
                 </li>
                 <li><a href="blog.html" class="header__menu-link">blog</a></li>
                 <li>
